2008-01-09  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: MUC kicks a participant if sends a
	private message with type=error (EJAB-496)

2008-01-08  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Removed the option ERL_FULLSWEEP_AFTER
	because it is almost useless regarding ejabberd's performance.
	* src/ejabberdctl.cfg.example: Likewise

2008-01-08  Christophe Romain  <christophe.romain@process-one.net>

	* doc/Makefile: fix version.tex generation bug

2008-01-01  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Uniformize the name of
	ejabberd's web admin to: 'Web Admin' (EJAB-472)
	* doc/guide.tex: Likewise
	* doc/introduction.tex: Likewise

	* src/web/ejabberd_web_admin.erl: Uniformize ejabberd name in the
	text using the Latex command
	
	* src/mod_muc/mod_muc_room.erl: Resend 'continue' elements in muc
	room invitations (EJAB-490)

	* src/ejabberdctl.template: Create logs_dir if doesn't exist. New
	parameters --config, --ctl-config, --logs, --spool. Crash dump
	renamed to erl_crash_DATETIME.dump.
	
	* src/ejabberdctl.template: Backport improvements from binary
	installer (EJAB-488): options are simple values; enable Kernel
	Poll by default, set SMP to auto, set max ports to 32000, max
	processes to 250000.
	* src/ejabberdctl.cfg.example: Likewise

	* src/ejabberd.inetrc: Renamed ejabberd.inetrc to inetrc
	* src/inetrc: Likewise
	* src/Makefile.in: Likewise
	* doc/guide.tex: Likewise

2007-12-31  Badlop  <badlop@process-one.net>
	
	* src/msgs/ca.msg: Updated (thanks to Vicent Alberola Canet)

2007-12-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_s2s_out.erl: Fixed behavior when outgoing_s2s_port
	option is not defined (EJAB-487)

2007-12-27  Badlop  <badlop@process-one.net>

	* src/mod_vcard_ldap.erl: Fix some field names (EJAB-483)

2007-12-26  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Translate menu items of webadmin
	hooks in each module (EJAB-485)